fix: change btn-default hover colour to be more visible this allows the button to look nicer next to btn-primary, as the old hover colour was barely noticable

--- a/app/assets/stylesheets/spina/application.tailwind.css
+++ b/app/assets/stylesheets/spina/application.tailwind.css
@@ -39,11 +39,11 @@
   }
   
   .btn-default:hover {
-    @apply bg-gray-50;
+    @apply bg-gray-200;
   }
   
   .btn-default:active {
-    @apply shadow-inner bg-gray-100;
+    @apply shadow-inner bg-gray-200;
   }
   
   .btn-primary {
